--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/classnames": "2.2.4",
-    "@types/history": "4.6.2",
+    "@types/history": "^4.6.2",
     "@types/node": "10.3.2",
     "@types/react": "16.3.17",
     "@types/react-dom": "16.0.6",
